kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery
  namespace: ecomarket
  labels:
    app: delivery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery
  template:
    metadata:
      labels:
        app: delivery
    spec:
      containers:
        - name: delivery
          image: AWS_ECR_URI
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
