kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: delivery
  namespace: delivery
  labels:
    app: delivery
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: delivery
  type: LoadBalancer
